--- a/pom.xml
+++ b/pom.xml
@@ -26,7 +26,7 @@
 	<dependencies>
 		<dependency><groupId>org.jboss.ironjacamar</groupId><artifactId>ironjacamar-jdbc</artifactId><version>1.4.11.Final-redhat-00001</version><scope>provided</scope></dependency>
 		<dependency><groupId>org.jboss.logging</groupId><artifactId>jboss-logging</artifactId><scope>provided</scope></dependency>
-		<dependency><groupId>org.jboss.spec.javax.ejb</groupId><artifactId>jboss-ejb-api_3.2_spec</artifactId><scope>provided</scope></dependency>
+<!--		<dependency><groupId>org.jboss.spec.javax.ejb</groupId><artifactId>jboss-ejb-api_3.2_spec</artifactId><scope>provided</scope></dependency>-->
 
 	</dependencies>
 
