--- a/interceptor-ejb/pom.xml
+++ b/interceptor-ejb/pom.xml
@@ -17,6 +17,8 @@
 		<!-- Import the EJB 3.2 API, we use provided scope as the API is included in JBoss WildFly -->
 		<dependency><groupId>org.jboss.spec.javax.ejb</groupId><artifactId>jboss-ejb-api_3.2_spec</artifactId><scope>provided</scope></dependency>
         <dependency><groupId>org.jboss.spec.javax.interceptor</groupId><artifactId>jboss-interceptors-api_1.2_spec</artifactId></dependency>
+        <dependency><groupId>org.jboss.logging</groupId><artifactId>jboss-logging</artifactId><scope>provided</scope></dependency>
+        <dependency><groupId>org.wildfly.security</groupId><artifactId>wildfly-elytron</artifactId><version>1.6.1.Final-redhat-00001</version><scope>provided</scope></dependency>
 	</dependencies>
 
     <build>
